[#22] Update Security